# presto

./: .gitignore  .modalignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  __init__.py  __main__.py  develop.sh  lint.sh  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml
cli/: __init__.py  data.py  evaluate.py  main.py  predict.py  train.py  weights.py
data/: __init__.py  allele_resolver.py  b2m_sequences.csv  collate.py  cross_source_dedup.py  downloaders.py  groove.py  loaders.py  manifest.json  merged_deduped_funnel.tsv  mhc_index.py  mhc_sequence_resolver.py  mouse_mhc_overlay.py  tokenizer.py  vocab.py
docs/: architecture.md  assay_modeling_contract.md  cli.md  curriculum.md  design.md  index.md  repo_inventory.md  tcr_spec.md  training_spec.md
experiments/: AGENT_COORDINATION.md  EXPERIMENT_WORKFLOW.md  README.md  experiment_log.md  model_to_beat.md
inference/: __init__.py  predictor.py
models/: __init__.py  affinity.py  encoders.py  heads.py  pmhc.py  presto.py  presto_modules.py  tcr.py
scripts/: __init__.py  aggregate_summary_runs.py  assay_ablation_probe.py  audit_mhc_groove.py  benchmark_assay_ablation.py  benchmark_assay_head_bakeoff.py  benchmark_binding_latents.py  benchmark_broad_frontier_5ep.py  benchmark_design_round2.py  benchmark_design_round3.py  benchmark_directness_designs.py  benchmark_distributional_ba_heads.py  benchmark_distributional_ba_heads_v2.py  benchmark_distributional_ba_heads_v3.py  benchmark_distributional_ba_heads_v4.py  benchmark_factorized_multioutput.py  benchmark_h100_batchsize.py  benchmark_hardware_generalization.py  benchmark_lr_schedule_bakeoff.py  benchmark_modal_hardware.py  benchmark_positional_composition.py  benchmark_presto_bakeoff.py  benchmark_register_designs.py  benchmark_runtime_multiallele.py  benchmark_runtime_variants.py  benchmark_target_space_bakeoff.py  collect_modal_runs.py  experiment_registry.py  fetch_experiment_modal_runs.py  focused_binding_probe.py  groove_baseline_probe.py  pretrain_mhc_encoder.py  train_iedb.py  (+8 more)
(+2411 files in other folders)
